add identity lib to manage users registration

--- a/CvBuilder.Api/appsettings.json
+++ b/CvBuilder.Api/appsettings.json
@@ -6,7 +6,10 @@
     }
   },
   "ConnectionStrings": {
-    "CvBuilderDB": "Server=localhost;Database=CvBuilder2;User Id=sa;Password=Temporal1;TrustServerCertificate=True;"
+    "CvBuilderDB": "Server=localhost;Database=CvBuilder3;User Id=sa;Password=Temporal1;TrustServerCertificate=True;"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtSettings": {
+    "Secret": "MePareceQueEstaVezMeJugaste123UnaMalaPasad__a#!"
+  }
 }
