add sqllite and user confirmation

--- a/CvBuilder.Api/appsettings.json
+++ b/CvBuilder.Api/appsettings.json
@@ -5,8 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "UseInFileDataBase": "true",
   "ConnectionStrings": {
     "CvBuilderDB": "Server=localhost;Database=CvBuilder5;User Id=sa;Password=Temporal1;TrustServerCertificate=True;"
+    //"CvBuilderDB": "Server=demo.seguridadar.com,5300;Database=frizzapp-dev;User Id=peke-sa;Password=Desalineados22#!;"
   },
   "AllowedHosts": "*",
   "JwtSettings": {
